@@ -1,12 +1,16 @@
 ## gradle.properfies
 
 ```
-org.gradle.parallel=true
-org.gradle.workers.max=4
-org.gradle.daemon=true
-org.gradle.configureondemand=true
-android.enableBuildCache=true
+org.gradle.jvmargs=-Xmx2g -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.workers.max=4 // Option
+
+android.enableR8=true // AS 3.3 or Higher
+android.enableD8.desugaring=true // AS 3.3 or Higher
+android.enableBuildCache=true
 ```
 
 ## build.gradle
@@ -19,8 +23,13 @@ android {
             ext.alwaysUpdateBuildId = false
         }
     }
+    
+    dexOptions {
+        preDexLibraries true
+        javaMaxHeapSize "4G"
+    }
 
-    if (project.hasProperty('devBuild')){
+    if (project.hasProperty('devBuild')) {
         splits.abi.enable = false
         splits.density.enable = false
         aaptOptions.cruncherEnabled = false
@@ -34,16 +43,16 @@ kapt {
 
 ## Crashlytics
 
-```
+```kotlin
 // Initializes Fabric for builds that don't use the debug build type.
-Crashlytics crashlyticsKit = new Crashlytics.Builder()
-    .core(new CrashlyticsCore.Builder().disabled(BuildConfig.DEBUG).build())
-    .build();
+val crashlyticsKit = Crashlytics.Builder()
+    .core(CrashlyticsCore.Builder().disabled(BuildConfig.DEBUG).build())
+    .build()
 
-Fabric.with(this, crashlyticsKit);
+Fabric.with(this, crashlyticsKit)
 ```
 
-## Compiler
+## Gradle - Compiler
 
 ```
 -PdevBuild
